@@ -7,6 +7,7 @@ version 3.006:
 	- Mail::Box::POP3 and Mail::Transport::POP3 can set SSL during
 	  construction.
 	  rt.cpan.org#140896 [Yanyan Yang]
+	- Add OUATH2 verification [Madha Prasad]
 
 	Changes:
 	- Default SSL options disable verification.
